# OZON-PILOT-1

./: .gitignore  AGENTS.md  HEAL THE BIG SOILDER.sln  README.md  build.cmd
commerce-gateway/: .env.example  Caddyfile.example  README.md  alembic.ini  pyproject.toml
commerce-gateway/app/: __init__.py  main.py
commerce-gateway/app/adapters/: __init__.py  contracts.py  image_adapter.py
commerce-gateway/app/admin/: router.py
commerce-gateway/app/admin_ui/: router.py
commerce-gateway/app/auth/: __init__.py  dependencies.py  router.py
commerce-gateway/app/billing/: __init__.py  router.py
commerce-gateway/app/biz/: __init__.py  router.py
commerce-gateway/app/client/: __init__.py  router.py
commerce-gateway/app/core/: config.py  errors.py  request_context.py  request_utils.py  security.py
commerce-gateway/app/db/: models.py  seed.py  seed_cli.py
commerce-gateway/app/keys/: __init__.py  router.py
commerce-gateway/app/metering/: __init__.py  dependencies.py  quota.py  rate_limit.py
commerce-gateway/app/templates/admin/: base.html  dashboard.html  licenses.html  login.html  subscriptions.html  usage.html  users.html
commerce-gateway/app/workers/: __init__.py  quota_reconciler.py  runtime.py
commerce-gateway/migrations/: env.py
commerce-gateway/migrations/versions/: 0001_initial.py  0002_client_automation.py  0003_request_reservations.py  0004_action_permit_quota_keys.py  0005_admin_dashboard_hardening.py
commerce-gateway/tests/: conftest.py  test_fulfillment_labels.py  test_quota_reconciler.py  test_security_helpers.py
electron-shell/: app.js  (+6 more)
(+26 files in other folders)
